Adding icons in video call section

--- a/src/sass/video_call.scss
+++ b/src/sass/video_call.scss
@@ -9,33 +9,71 @@ body {
 }
 
 .container {
-    // border: 2px solid white;
     display: flex;
 }
 
-.video-call {
-    // border: 2px solid white;
-    // background: red;
-    width: 71vw;
-    height: 93vh;
-    display: flex;
-    flex-flow: row wrap;
-
-    .frnd {
+.container-2 {
+    .video-call {
         // border: 2px solid white;
-        background: white;
-        width: 22vw;
-        height: 25vh;
-        margin-left: 1%;
-        border-radius: 10px;
+        width: 67vw;
+        height: 85vh;
+        display: flex;
+        flex-wrap:wrap;
+        background: black;
+        .frnd {
+            background: white;
+            width: 20vw;
+            height: 25vh;
+            margin: 10px 10px;
+            border-radius: 20px;
+        }
+        .frnd-1{
+            width:63vw;
+            height: 55vh;
+        }
     }
 
-    .frnd-1 {
-        border-bottom-right-radius: 20px;
-        border-top-right-radius: 20px;
-        width: 67vw;
-        height: 65vh;
-        margin-top: 1%;
+    .functions {
+        // border: 2px solid blue;
+        height: 7vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        .icons {
+            display: flex;
+            width: 200px;
+            margin: 0px 30px;
+
+            .mic {
+                color: rgb(75, 75, 255);
+            }
+
+            .icon-video {
+                color: whitesmoke;
+            }
+
+            .i {
+                margin: 0px 30px;
+
+                &:hover {
+                    cursor: pointer;
+                }
+            }
+        }
+
+        .end-meeting {
+            font-size: 20px;
+            padding: 5px 20px;
+            color: white;
+            background: red;
+            border: none;
+            border-radius: 20px;
+
+            &:hover {
+                cursor: pointer;
+            }
+        }
     }
 }
 
@@ -47,35 +85,60 @@ body {
     flex-direction: column;
 
     .video-members {
-        // background: red;
         height: 50vh;
 
         .video-heading {
-            // border: 2px solid black;
             text-align: center;
             color: white;
-            border-bottom: 1px solid red;
             padding: 7px 0px;
+            background: rgb(21, 18, 18);
         }
 
         .participants {
-            border: 2px solid red;
+            // border: 2px solid red;
+            // display: flex;
+            // flex-direction: column;
+            // align-items: center;
             height: 45vh;
             overflow-y: scroll;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
 
             .participant {
-                color: white;
-                display: block;
-                margin: 2% 0px;
-                // border: 2px solid white;
                 text-align: left;
-                width: 300px;
-                padding: 5px 20px;
-                font-size: 20px;
-                background: #161516;
+                // border: 2px solid white;
+                // background: rgb(45, 43, 43);
+                font-size: 21px;
+                padding: 10px 15px 10px 20px;
+                width: 320px;
+                margin: 20px 0px 20px 30px;
+                border-radius: 20px;
+                display: flex;
+
+                .icons {
+                    // border: 2px solid white;
+                    display: flex;
+                    margin-left: auto;
+
+                    .mic {
+                        color: rgb(75, 75, 255);
+                    }
+
+                    .video {
+                        color: white;
+                    }
+
+                    .i {
+                        margin-left: 10px;
+
+                        &:hover {
+                            cursor: pointer;
+                        }
+                    }
+                }
+
+                &:hover {
+                    background-color: #474348;
+                    // cursor: pointer;
+                }
             }
         }
     }
@@ -87,10 +150,18 @@ body {
             color: white;
             text-align: center;
             background: rgb(21, 18, 18);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 5px 0px;
+
+            .chat-icon {
+                margin-right: 5px;
+            }
         }
 
         .chats {
-            height: 36vh;
+            height: 34vh;
             // background: blue;
             color: white;
             overflow-y: scroll;
