--- a/src/sass/video_call.css
+++ b/src/sass/video_call.css
@@ -14,32 +14,78 @@ body {
   display: flex;
 }
 
-.video-call {
-  width: 71vw;
-  height: 93vh;
+.container-2 .video-call {
+  width: 67vw;
+  height: 85vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row wrap;
-          flex-flow: row wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  background: black;
 }
 
-.video-call .frnd {
+.container-2 .video-call .frnd {
   background: white;
-  width: 22vw;
+  width: 20vw;
   height: 25vh;
-  margin-left: 1%;
-  border-radius: 10px;
+  margin: 10px 10px;
+  border-radius: 20px;
 }
 
-.video-call .frnd-1 {
-  border-bottom-right-radius: 20px;
-  border-top-right-radius: 20px;
-  width: 67vw;
-  height: 65vh;
-  margin-top: 1%;
+.container-2 .video-call .frnd-1 {
+  width: 63vw;
+  height: 55vh;
+}
+
+.container-2 .functions {
+  height: 7vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.container-2 .functions .icons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 200px;
+  margin: 0px 30px;
+}
+
+.container-2 .functions .icons .mic {
+  color: #4b4bff;
+}
+
+.container-2 .functions .icons .icon-video {
+  color: whitesmoke;
+}
+
+.container-2 .functions .icons .i {
+  margin: 0px 30px;
+}
+
+.container-2 .functions .icons .i:hover {
+  cursor: pointer;
+}
+
+.container-2 .functions .end-meeting {
+  font-size: 20px;
+  padding: 5px 20px;
+  color: white;
+  background: red;
+  border: none;
+  border-radius: 20px;
+}
+
+.container-2 .functions .end-meeting:hover {
+  cursor: pointer;
 }
 
 .right {
@@ -61,35 +107,52 @@ body {
 .right .video-members .video-heading {
   text-align: center;
   color: white;
-  border-bottom: 1px solid red;
   padding: 7px 0px;
+  background: #151212;
 }
 
 .right .video-members .participants {
-  border: 2px solid red;
   height: 45vh;
   overflow-y: scroll;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
 }
 
 .right .video-members .participants .participant {
-  color: white;
-  display: block;
-  margin: 2% 0px;
   text-align: left;
-  width: 300px;
-  padding: 5px 20px;
-  font-size: 20px;
-  background: #161516;
+  font-size: 21px;
+  padding: 10px 15px 10px 20px;
+  width: 320px;
+  margin: 20px 0px 20px 30px;
+  border-radius: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.right .video-members .participants .participant .icons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-left: auto;
+}
+
+.right .video-members .participants .participant .icons .mic {
+  color: #4b4bff;
+}
+
+.right .video-members .participants .participant .icons .video {
+  color: white;
+}
+
+.right .video-members .participants .participant .icons .i {
+  margin-left: 10px;
+}
+
+.right .video-members .participants .participant .icons .i:hover {
+  cursor: pointer;
+}
+
+.right .video-members .participants .participant:hover {
+  background-color: #474348;
 }
 
 .right .chatting {
@@ -100,10 +163,24 @@ body {
   color: white;
   text-align: center;
   background: #151212;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 5px 0px;
+}
+
+.right .chatting .chat-heading .chat-icon {
+  margin-right: 5px;
 }
 
 .right .chatting .chats {
-  height: 36vh;
+  height: 34vh;
   color: white;
   overflow-y: scroll;
 }
