--- a/src/sass/navbar.scss
+++ b/src/sass/navbar.scss
@@ -24,7 +24,7 @@ body{
 
         &::after {
             content: "play";
-            color: whitesmoke;
+            color: black;
             font-family: 'Roboto', sans-serif;
         }
 
@@ -44,7 +44,7 @@ body{
             list-style: none;
             margin: 5px 10px;
             a{
-                color: white;
+                color: black;
                 text-decoration: none;
             }
             &:hover {
