--- a/src/sass/Home.css
+++ b/src/sass/Home.css
@@ -1,11 +1,15 @@
 * {
   margin: 0px;
   padding: 0px;
+  overflow: hidden;
 }
 
 .container {
   height: 93vh;
   width: 100vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .container .left {
@@ -110,21 +114,29 @@
   height: 32vh;
 }
 
-.container .right .bottom p {
+.container .right .bottom .about {
+  margin-top: 1%;
+  width: 450px;
+  margin-left: 10px;
+}
+
+.container .right .bottom .about p {
   text-align: center;
+  font-size: 20px;
 }
 
-.container .right .bottom p h5 {
+.container .right .bottom .about p h5 {
   display: inline;
+  font-size: 20px;
 }
 
-.container .right .bottom p h5::before {
+.container .right .bottom .about p h5::before {
   content: "Melon";
   color: blue;
   font-family: 'Italianno', cursive;
 }
 
-.container .right .bottom p h5::after {
+.container .right .bottom .about p h5::after {
   content: "Play";
   color: black;
   font-family: 'Roboto', sans-serif;
@@ -137,6 +149,7 @@
   background: orangered;
   color: whitesmoke;
   border-radius: 20px;
+  margin-left: 50px;
 }
 
 @-webkit-keyframes right {
