--- a/src/sass/Home.scss
+++ b/src/sass/Home.scss
@@ -1,13 +1,14 @@
 * {
     margin: 0px;
     padding: 0px;
+    overflow: hidden;
 }
 
 .container {
     // border: 2px solid black;
     height: 93vh;
     width: 100vw;
-
+    display: flex;
     .left {
         width: 60vw;
         // border: 2px solid black;
@@ -91,34 +92,43 @@
             flex-direction: column;
             align-items: center;
             height: 32vh;
-            p {
-                text-align: center;
 
-                h5 {
-                    display: inline;
+            .about {
+                // border: 2px solid black;
+                margin-top: 1%;
+                width: 450px;
+                margin-left: 10px;
+                p {
+                    text-align: center;
+                    font-size: 20px;
+                    h5 {
+                        display: inline;
+                        font-size: 20px;
+                        &::before {
+                            content: "Melon";
+                            color: blue;
+                            // font-size: 40px;
+                            font-family: 'Italianno', cursive;
+                        }
 
-                    &::before {
-                        content: "Melon";
-                        color: blue;
-                        // font-size: 40px;
-                        font-family: 'Italianno', cursive;
-                    }
-
-                    &::after {
-                        content: "Play";
-                        color: black;
-                        // font-size: 40px;
-                        font-family: 'Roboto', sans-serif;
+                        &::after {
+                            content: "Play";
+                            color: black;
+                            // font-size: 40px;
+                            font-family: 'Roboto', sans-serif;
+                        }
                     }
                 }
             }
-            .know-more{
+
+            .know-more {
                 margin-top: 5%;
                 font-size: 18px;
                 padding: 5px 20px;
                 background: orangered;
-                color: whitesmoke;  
+                color: whitesmoke;
                 border-radius: 20px;
+                margin-left: 50px;
             }
         }
 
