--- a/src/sass/video_call.css
+++ b/src/sass/video_call.css
@@ -1,18 +1,22 @@
 * {
   margin: 0px;
   padding: 0px;
-  overflow: hidden;
 }
 
-.container {
+.video-call-container {
+  height: 93vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.container-2 .video-call {
-  width: 67vw;
-  height: 85vh;
+.video-call-container .video-call-left {
+  border-right: 1px solid black;
+  width: 65vw;
+}
+
+.video-call-container .video-call-left .video-call {
+  height: 86vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -20,21 +24,23 @@
       flex-wrap: wrap;
 }
 
-.container-2 .video-call .frnd {
+.video-call-container .video-call-left .video-call .friend {
   background: black;
-  width: 20vw;
-  height: 25vh;
-  margin: 10px 10px;
   border-radius: 20px;
+  width: 20vw;
+  height: 20vh;
+  margin: 1% 1%;
 }
 
-.container-2 .video-call .frnd-1 {
-  width: 63vw;
+.video-call-container .video-call-left .video-call .friend-1 {
+  width: 60vw;
   height: 55vh;
+  margin: 1%;
 }
 
-.container-2 .functions {
+.video-call-container .video-call-left .buttons {
   height: 7vh;
+  color: black;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -44,48 +50,43 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  border-top: 1px solid black;
 }
 
-.container-2 .functions .icons {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 200px;
-  margin: 0px 30px;
+.video-call-container .video-call-left .buttons .buttons-section-mic {
+  color: blue;
+  margin: 0px 20px;
 }
 
-.container-2 .functions .icons .mic {
-  color: #4b4bff;
-}
-
-.container-2 .functions .icons .icon-video {
-  color: black;
-}
-
-.container-2 .functions .icons .i {
-  margin: 0px 30px;
-}
-
-.container-2 .functions .icons .i:hover {
+.video-call-container .video-call-left .buttons .buttons-section-mic:hover {
   cursor: pointer;
 }
 
-.container-2 .functions .end-meeting {
-  font-size: 20px;
+.video-call-container .video-call-left .buttons .buttons-section-video {
+  color: black;
+  margin: 0px 20px;
+}
+
+.video-call-container .video-call-left .buttons .buttons-section-video:hover {
+  cursor: pointer;
+}
+
+.video-call-container .video-call-left .buttons .end-meeting {
+  font-size: 18px;
   padding: 5px 20px;
   color: white;
   background: red;
-  border: none;
   border-radius: 20px;
+  margin: 0px 20px;
 }
 
-.container-2 .functions .end-meeting:hover {
+.video-call-container .video-call-left .buttons .end-meeting:hover {
   cursor: pointer;
 }
 
-.right {
-  width: 32vw;
-  height: auto;
+.video-call-container .participants-chats-right {
+  width: 35vw;
+  height: 92vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -95,138 +96,122 @@
           flex-direction: column;
 }
 
-.right .video-members {
-  height: 50vh;
+.video-call-container .participants-chats-right .participants-section {
+  height: 46vh;
 }
 
-.right .video-members .video-heading {
-  text-align: center;
+.video-call-container .participants-chats-right .participants-section .participant-heading {
+  border-bottom: 1px solid black;
   color: black;
-  padding: 7px 0px;
+  text-align: center;
+  font-size: 14px;
 }
 
-.right .video-members .participants {
-  height: 45vh;
-  overflow-y: scroll;
+.video-call-container .participants-chats-right .participants-section .participants {
+  height: 41vh;
+  overflow-y: auto;
+  padding: 5px 40px;
 }
 
-.right .video-members .participants .participant {
-  text-align: left;
-  font-size: 21px;
-  padding: 10px 15px 10px 20px;
-  width: 320px;
-  margin: 20px 0px 20px 30px;
+.video-call-container .participants-chats-right .participants-section .participants .participant {
+  color: black;
+  border: 1px solid black;
+  width: 27vw;
+  font-size: 20px;
+  padding: 5px 0px 5px 20px;
+  margin: 20px 0px;
   border-radius: 20px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  color: black;
 }
 
-.right .video-members .participants .participant .icons {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+.video-call-container .participants-chats-right .participants-section .participants .participant .participant-icons {
+  width: 70px;
   margin-left: auto;
 }
 
-.right .video-members .participants .participant .icons .mic {
-  color: #4b4bff;
+.video-call-container .participants-chats-right .participants-section .participants .participant .participant-icons .participant-mic {
+  color: blue;
+  display: inline;
 }
 
-.right .video-members .participants .participant .icons .video {
-  color: black;
-}
-
-.right .video-members .participants .participant .icons .i {
-  margin-left: 10px;
-}
-
-.right .video-members .participants .participant .icons .i:hover {
+.video-call-container .participants-chats-right .participants-section .participants .participant .participant-icons .participant-mic:hover {
   cursor: pointer;
-  color: white;
 }
 
-.right .video-members .participants .participant:hover {
-  color: white;
-  background-color: #474348;
+.video-call-container .participants-chats-right .participants-section .participants .participant .participant-icons .participant-video {
+  display: inline;
+  margin-left: 20px;
 }
 
-.right .chatting {
-  height: 50vh;
+.video-call-container .participants-chats-right .participants-section .participants .participant .participant-icons .participant-video:hover {
+  cursor: pointer;
 }
 
-.right .chatting .chat-heading {
+.video-call-container .participants-chats-right .chatting-section {
+  height: 46vh;
+}
+
+.video-call-container .participants-chats-right .chatting-section .chat-heading {
+  border-bottom: 1px solid black;
+  border-top: 1px solid black;
   color: black;
-  text-align: center;
+  font-size: 14px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding: 5px 0px;
+  -ms-flex-line-pack: center;
+      align-content: center;
 }
 
-.right .chatting .chat-heading .chat-icon {
-  margin-right: 5px;
+.video-call-container .participants-chats-right .chatting-section .chats {
+  height: 35vh;
+  color: black;
+  overflow-y: auto;
 }
 
-.right .chatting .chats {
-  height: 34vh;
-  color: white;
-  overflow-y: scroll;
+.video-call-container .participants-chats-right .chatting-section .chats .message {
+  border: 1px solid black;
+  margin: 5px 10px;
+  padding: 4px 10px;
 }
 
-.right .chatting .chats .message-left {
+.video-call-container .participants-chats-right .chatting-section .chats .message-left {
   float: left;
-  display: block;
   clear: both;
-  padding: 5px 10px;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
   border-bottom-right-radius: 20px;
-  background: #474348;
-  margin: 2% 0px;
 }
 
-.right .chatting .chats .message-right {
+.video-call-container .participants-chats-right .chatting-section .chats .message-right {
   float: right;
-  display: block;
   clear: both;
-  padding: 5px 10px;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
   border-bottom-left-radius: 20px;
-  background: #474348;
-  margin: 2% 0px;
 }
 
-.right .chatting .message {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+.video-call-container .participants-chats-right .chatting-section .input {
+  height: 5vh;
+  margin-top: 1%;
 }
 
-.right .chatting .message input {
+.video-call-container .participants-chats-right .chatting-section .input input {
   font-size: 18px;
-  border: none;
-  width: 400px;
-  background: none;
-  color: black;
-  padding: 0px 10px;
+  width: 360px;
+  padding: 3px 4px;
 }
 
-.right .chatting .message .btn {
-  font-size: 15px;
-  width: 90px;
-  color: white;
+.video-call-container .participants-chats-right .chatting-section .input .submit {
+  font-size: 16px;
+  padding: 3px 20px;
   background: blue;
-  border: none;
-  cursor: pointer;
-  border-radius: 15px;
+  color: whitesmoke;
+  border-radius: 20px;
 }
 /*# sourceMappingURL=video_call.css.map */
