--- a/src/sass/Home.css
+++ b/src/sass/Home.css
@@ -99,6 +99,10 @@
   border-radius: 20px;
 }
 
+.container .right .start-call-btn:hover {
+  cursor: pointer;
+}
+
 .container .right .bottom {
   margin-top: 10%;
   display: -webkit-box;
@@ -117,29 +121,18 @@
 .container .right .bottom .about {
   margin-top: 1%;
   width: 450px;
-  margin-left: 10px;
+  margin-left: 50px;
+  text-align: left;
+}
+
+.container .right .bottom .about h5 {
+  display: inline;
+  font-size: 40px;
+  color: black;
 }
 
 .container .right .bottom .about p {
-  text-align: center;
-  font-size: 20px;
-}
-
-.container .right .bottom .about p h5 {
-  display: inline;
-  font-size: 20px;
-}
-
-.container .right .bottom .about p h5::before {
-  content: "Melon";
-  color: blue;
-  font-family: 'Italianno', cursive;
-}
-
-.container .right .bottom .about p h5::after {
-  content: "Play";
   color: black;
-  font-family: 'Roboto', sans-serif;
 }
 
 .container .right .bottom .know-more {
@@ -150,6 +143,10 @@
   color: whitesmoke;
   border-radius: 20px;
   margin-left: 50px;
+}
+
+.container .right .bottom .know-more:hover {
+  cursor: pointer;
 }
 
 @-webkit-keyframes right {
