--- a/src/sass/navbar.scss
+++ b/src/sass/navbar.scss
@@ -3,7 +3,7 @@
     padding: 0px;
 }
 
-body{
+body {
     color: white;
 }
 
@@ -43,10 +43,12 @@ body{
             text-decoration: none;
             list-style: none;
             margin: 5px 10px;
-            a{
+
+            a {
                 color: black;
                 text-decoration: none;
             }
+
             &:hover {
                 cursor: pointer;
                 color: rgb(111, 111, 174);
@@ -61,59 +63,47 @@ body{
         }
     }
 
-    .btn-login {
-        margin: 10px;
-        // font-family: "Arial Black", Gadget, sans-serif;
-        font-size: 18px;
-        // padding: 15px;
-        padding: 5px 10px;
-        border: none;
-        text-align: center;
-        text-transform: uppercase;
-        transition: 0.5s;
-        background-size: 200% auto;
-        color: #FFF;
-        box-shadow: 0 0 20px #eee;
-        border-radius: 10px;
-        width: 150px;
-        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-        transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
-        cursor: pointer;
-        display: inline-block;
-        border-radius: 25px;
-        background-image: linear-gradient(to right, #00d2ff 0%, #3a7bd5 51%, #00d2ff 100%)
-    }
-
     .buttons {
         // border: 2px solid black;
-        margin-left: 15%;
-    }
+        position: absolute;
+        right: 3%;
+        display: flex;
+        justify-content: center;
+        width: 20vw;
 
-    .btn-signup {
-        margin: 10px;
-        // font-family: "Arial Black", Gadget, sans-serif;
-        font-size: 18px;
-        padding: 5px 10px;
-        text-align: center;
-        border: none;
-        text-transform: uppercase;
-        transition: 0.5s;
-        background-size: 200% auto;
-        color: #FFF;
-        box-shadow: 0 0 20px #eee;
-        border-radius: 10px;
-        width: 150px;
-        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-        transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
-        cursor: pointer;
-        display: inline-block;
-        border-radius: 25px;
-        background-image: linear-gradient(to right, #DD5E89 0%, #F7BB97 51%, #DD5E89 100%)
-    }
-    .btn-darkmode{
-        padding: 5px 10px;
-        border-radius: 10px;
-        background-color: #00d2ff;
-        color: white;
+        .btn-login {
+            font-size: 18px;
+            padding: 4px 20px;
+            border: none;
+            border-radius: 10px;
+            background: white;
+            border: 1px solid blue;
+            color: blue;
+
+            &:hover {
+                color: white;
+                background-color: blue;
+                cursor: pointer;
+                scale: 1.1;
+            }
+        }
+
+        .btn-signup {
+            font-size: 18px;
+            padding: 4px 20px;
+            border: none;
+            margin-left: 10%;
+            border-radius: 10px;
+            background: white;
+            border: 1px solid orangered;
+            color: orangered;
+
+            &:hover {
+                cursor: pointer;
+                background: orangered;
+                color: white;
+                scale: 1.1;
+            }
+        }
     }
 }
