--- a/src/sass/video_call.scss
+++ b/src/sass/video_call.scss
@@ -10,7 +10,7 @@
 
     .video-call-left {
         // border: 2px solid black;
-        border-right: 1px solid black;
+        // border-right: 1px solid black;
         width: 65vw;
 
         .video-call {
@@ -21,18 +21,74 @@
 
             // overflow-y: auto;
             .friend {
-                background: black;
+                // background: black;
                 border-radius: 20px;
+                // border: 2px solid black;
+                background: whitesmoke;
                 width: 20vw;
                 height: 20vh;
                 margin: 1% 1%;
+                box-shadow: 5px 5px 20px 10px grey;
+
+                .frnd-icons {
+                    // border: 2px solid white;
+                    display: flex;
+                    width: 70px;
+                    position: relative;
+                    left: 70%;
+                    top: 75%;
+
+                    .frnd-mic {
+                        color: blue;
+
+                        &:hover {
+                            cursor: pointer;
+                        }
+                    }
+
+                    .frnd-video {
+                        margin-left: 30%;
+                        color: black;
+
+                        &:hover {
+                            cursor: pointer;
+                        }
+                    }
+                }
             }
 
             .friend-1 {
                 // border: 2px solid blue;
-                width: 60vw;
-                height: 55vh;
+                width: 65vw;
+                height: 60vh;
                 margin: 1%;
+                box-shadow: 5px 5px 20px 10px grey;
+
+                .frnd1-icons {
+                    // border: 2px solid white;
+                    display: flex;
+                    width: 70px;
+                    position: relative;
+                    left: 87%;
+                    top: 90%;
+
+                    .frnd-mic {
+                        color: blue;
+
+                        &:hover {
+                            cursor: pointer;
+                        }
+                    }
+
+                    .frnd-video {
+                        margin-left: 30%;
+                        color: black;
+
+                        &:hover {
+                            cursor: pointer;
+                        }
+                    }
+                }
             }
         }
 
@@ -43,23 +99,57 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            border-top: 1px solid black;
+            border-radius: 20px;
 
             .buttons-section-mic {
                 color: blue;
                 margin: 0px 20px;
+                // border: 2px solid black;
+                width: 40px;
+                height: 40px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                border-radius: 50%;
+                box-shadow: 10px 10px 5px grey;
 
                 &:hover {
                     cursor: pointer;
+                    scale: 1.1;
                 }
             }
 
             .buttons-section-video {
                 color: black;
                 margin: 0px 20px;
+                width: 40px;
+                height: 40px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                border-radius: 50%;
+                box-shadow: 10px 10px 5px grey;
 
                 &:hover {
                     cursor: pointer;
+                    scale: 1.1;
+                }
+            }
+
+            .buttons-section-screen-share {
+                color: black;
+                margin: 0px 20px;
+                width: 40px;
+                height: 40px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                border-radius: 50%;
+                box-shadow: 10px 10px 5px grey;
+
+                &:hover {
+                    cursor: pointer;
+                    scale: 1.1;
                 }
             }
 
@@ -70,8 +160,10 @@
                 background: red;
                 border-radius: 20px;
                 margin: 0px 20px;
+                box-shadow: 5px 5px 5px grey;
 
                 &:hover {
+                    scale: 1.1;
                     cursor: pointer;
                 }
             }
@@ -91,27 +183,40 @@
 
             .participant-heading {
                 // border: 2px solid black;
-                border-bottom: 1px solid black;
+                // border-bottom: 1px solid black;
+                // background: grey;
+                border-radius: 20px;
+                box-shadow: 2px 2px 10px grey;
                 color: black;
                 text-align: center;
                 font-size: 14px;
+                padding: 5px 0px;
+                background: grey;
+                color: white;
+                text-shadow: 1px 1px 10px whitesmoke;
+                font-family: 'Courier New', Courier, monospace;
             }
 
             .participants {
-                // border: 2px solid black;
-                height: 41vh;
+                // border: 1px solid black;
+                border-radius: 20px;
+                height: 40vh;
                 overflow-y: auto;
                 padding: 5px 40px;
 
+                // box-shadow: 2px 2px 0px grey;
                 .participant {
                     color: black;
-                    border: 1px solid black;
+                    // border: 1px solid black;
+                    // background: #ffd6d6;
+                    // color: whitesmoke;
                     width: 27vw;
                     font-size: 20px;
                     padding: 5px 0px 5px 20px;
                     margin: 20px 0px;
                     border-radius: 20px;
                     display: flex;
+                    box-shadow: 6px 6px 10px 4px grey;
 
                     .participant-icons {
                         // border: 2px solid black;
@@ -146,30 +251,42 @@
 
             .chat-heading {
                 // border: 2px solid black;
-                border-bottom: 1px solid black;
-                border-top: 1px solid black;
-                color: black;
+                // border-bottom: 1px solid black;
+                // border-top: 1px solid black;
+                border-radius: 20px;
+                // background:grey;
                 font-size: 14px;
                 display: flex;
                 justify-content: center;
                 align-content: center;
+                color: black;
+                font-family: 'Courier New', Courier, monospace;
+                text-shadow: 2px 2px 10px whitesmoke;
+                box-shadow: 2px 2px 10px 5px grey;
+                background: grey;
+                color: white;
+                padding: 4px 0px;
             }
 
             .chats {
-                // border: 2px solid black;
+                // border: 1px solid black;
+                border-radius: 20px;
                 height: 37vh;
                 color: black;
                 overflow-y: auto;
 
                 .message {
-                    border: 1px solid black;
                     margin: 5px 10px;
                     padding: 4px 10px;
+                    box-shadow: 2px 2px 10px 2px grey;
                 }
 
                 .message-left {
                     float: left;
                     clear: both;
+                    color: white;
+                    background: blue;
+                    box-shadow: 2px 2px 20px blue;
                     border-top-left-radius: 20px;
                     border-top-right-radius: 20px;
                     border-bottom-right-radius: 20px;
@@ -178,6 +295,8 @@
                 .message-right {
                     float: right;
                     clear: both;
+                    background: #ffebeb;
+                    color: black;
                     border-top-left-radius: 20px;
                     border-top-right-radius: 20px;
                     border-bottom-left-radius: 20px;
@@ -190,13 +309,19 @@
                 position: absolute;
                 bottom: 0px;
 
+                // box-shadow: 2px 2px 10px 5px grey;
                 input {
                     font-size: 18px;
-                    width: 350px;
+                    width: 22vw;
                     padding: 3px 4px;
                     border: none;
-                    border-bottom: 2px solid blue;
+                    // border-bottom: 2px solid blue;
                     margin-left: 20px;
+                    // border-radius: 20px;
+                    // border: 1px solid blue;
+                    border-bottom: 1px solid blue;
+                    padding-left: 20px;
+
                 }
 
                 .submit {
